k8s/ingress-nginx-https.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - client.k8s.xyz
    - server.k8s.xyz
    secretName: app-tls
  rules:
  - host: "client.k8s.xyz"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app-client
            port:
              number: 80
  - host: "server.k8s.xyz"
    http:
      paths:
      - pathType: Prefix
        path: /SpringMVC/
        backend:
          service:
            name: app-server
            port:
              number: 8089
