k8s/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "client.k8s.xyz"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app-client
            port:
              number: 80
  - host: "server.k8s.xyz"
    http:
      paths:
      - pathType: Prefix
        path: /SpringMVC/
        backend:
          service:
            name: app-server
            port:
              number: 8089
